--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "fs": "0.0.1-security",
     "node-xlsx": "^0.15.0",
+    "unirest": "^0.6.0",
     "xregexp": "^4.3.0"
   },
   "devDependencies": {
